--- a/Frontend/src/pages/Payment/Payment.css
+++ b/Frontend/src/pages/Payment/Payment.css
@@ -68,3 +68,8 @@
   font-size: 1.2rem;
   color: green;
 }
+.free-service-notice {
+  margin-bottom: 16px;
+  font-size: 0.95rem;
+  color: #856404;
+}
